--- a/index.html
+++ b/index.html
@@ -456,6 +456,25 @@
             </li>
           </ul>
         </div>
+        <div class="email-items">
+          <p class="email-text">Subscribe</p>
+          <form class="form">
+            <label>
+              <input
+                class="email-input"
+                type="email"
+                placeholder="E-mail"
+                required
+              />
+            </label>
+            <button class="email-button" type="button">
+              Subscribe
+              <svg class="email-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-telegram-icon"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
