--- a/index.html
+++ b/index.html
@@ -458,7 +458,7 @@
         </div>
         <div class="email-items">
           <p class="email-text">Subscribe</p>
-          <form class="form">
+          <form class="subscribe-form">
             <label>
               <input
                 class="email-input"
@@ -477,5 +477,91 @@
         </div>
       </div>
     </footer>
+
+    <div class="backdrop is-open">
+      <div class="modal">
+        <button class="modal-close-button" type="button">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close-button"></use>
+          </svg>
+        </button>
+        <p class="modal-text">Leave your contacts and we will call you back</p>
+
+        <form class="modal-form">
+          <div class="modal-form-field">
+            <label class="modal-label" for="username">Name</label>
+            <div class="input-box">
+              <input
+                class="modal-input-info"
+                type="text"
+                name="username"
+                id="username"
+                required
+              />
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-person-icon"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label class="modal-label" for="phone">Phone</label>
+            <div class="input-box">
+              <input
+                class="modal-input-info"
+                type="tel"
+                name="phone"
+                id="phone"
+                required
+              />
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-phone-icon"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label class="modal-label">Email</label>
+            <div class="input-box">
+              <input
+                class="modal-input-info"
+                type="email"
+                name="email"
+                id="email"
+                required
+              />
+              <svg class="modal-input-icon" width="18" height="24">
+                <use href="./images/icons.svg#icon-email-icon"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-form-field">
+            <label class="modal-label" for="description">Comment</label>
+            <textarea
+              class="modal-field-textarea"
+              id="description"
+              name="description"
+              placeholder="Text input"
+            ></textarea>
+          </div>
+
+          <div class="modal-checkbox">
+            <input
+              class="checkbox visually-hidden"
+              type="checkbox"
+              name="user-privacy"
+              id="user-privacy"
+            />
+            <label for="user-privacy" class="label-checkbox">
+              <span class="custom-checkbox">
+                <svg class="agreement-checkbox-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-select-button"></use>
+                </svg> </span
+              >I accept the terms and conditions of the
+              <a class="privacy-link" href="" target="_blank">Privacy Policy</a>
+            </label>
+          </div>
+          <button class="checkbox-button" type="submit">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
