--- a/index.html
+++ b/index.html
@@ -459,15 +459,16 @@
         <div class="email-items">
           <p class="email-text">Subscribe</p>
           <form class="subscribe-form">
-            <label>
+            <label class="footer-laber">
               <input
+                name="email"
                 class="email-input"
                 type="email"
                 placeholder="E-mail"
                 required
               />
             </label>
-            <button class="email-button" type="button">
+            <button class="email-button" type="submit">
               Subscribe
               <svg class="email-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-telegram-icon"></use>
@@ -489,13 +490,13 @@
 
         <form class="modal-form">
           <div class="modal-form-field">
-            <label class="modal-label" for="username">Name</label>
+            <label class="modal-label" for="user-name">Name</label>
             <div class="input-box">
               <input
                 class="modal-input-info"
                 type="text"
-                name="username"
-                id="username"
+                name="user-name"
+                id="user-name"
                 required
               />
               <svg class="modal-input-icon" width="18" height="24">
@@ -534,11 +535,11 @@
             </div>
           </div>
           <div class="modal-form-field">
-            <label class="modal-label" for="description">Comment</label>
+            <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="modal-field-textarea"
-              id="description"
-              name="description"
+              id="user-comment"
+              name="user-comment"
               placeholder="Text input"
             ></textarea>
           </div>
@@ -549,6 +550,7 @@
               type="checkbox"
               name="user-privacy"
               id="user-privacy"
+              value="true"
             />
             <label for="user-privacy" class="label-checkbox">
               <span class="custom-checkbox">
