--- a/index.html
+++ b/index.html
@@ -534,7 +534,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-form-field">
+          <div class="modal-form-field-text">
             <label class="modal-label" for="user-comment">Comment</label>
             <textarea
               class="modal-field-textarea"
